--- a/laboratorio_pandas/notebooks/conhecendo_pandas.ipynb
+++ b/laboratorio_pandas/notebooks/conhecendo_pandas.ipynb
@@ -1373,6 +1373,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tratando Valores Nulos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -1498,6 +1505,665 @@
    "source": [
     "df_apartamentos = df_alugueis_residencial.query('Tipo == \"Apartamento\"')\n",
     "df_apartamentos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tipo             0\n",
+       "Bairro           0\n",
+       "Quartos          0\n",
+       "Vagas            0\n",
+       "Suites           0\n",
+       "Area             0\n",
+       "Valor            7\n",
+       "Condominio     745\n",
+       "IPTU          5472\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verificando a quantidade de valores nulos\n",
+    "df_apartamentos.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tipo             0\n",
+       "Bairro           0\n",
+       "Quartos          0\n",
+       "Vagas            0\n",
+       "Suites           0\n",
+       "Area             0\n",
+       "Valor            7\n",
+       "Condominio     745\n",
+       "IPTU          5472\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_apartamentos.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# atribuindo 0 para os valores nulos\n",
+    "df_apartamentos = df_apartamentos.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tipo          0\n",
+       "Bairro        0\n",
+       "Quartos       0\n",
+       "Vagas         0\n",
+       "Suites        0\n",
+       "Area          0\n",
+       "Valor         0\n",
+       "Condominio    0\n",
+       "IPTU          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verificando a quantidade de valores nulos depois de preencher com 0\n",
+    "df_apartamentos.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remover registros "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tipo</th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Quartos</th>\n",
+       "      <th>Vagas</th>\n",
+       "      <th>Suites</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Valor</th>\n",
+       "      <th>Condominio</th>\n",
+       "      <th>IPTU</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Vista Alegre</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Barra da Tijuca</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>970.0</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Praça Seca</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Rocha Miranda</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32609</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Copacabana</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>4600.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32643</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Guadalupe</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32666</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Bonsucesso</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32708</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Flamengo</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>3500.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32809</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Cascadura</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>752 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Tipo           Bairro  Quartos  Vagas  Suites  Area   Valor  \\\n",
+       "5      Apartamento     Vista Alegre        3      1       0    70  1200.0   \n",
+       "10     Apartamento           Centro        1      0       0    36  1200.0   \n",
+       "76     Apartamento  Barra da Tijuca        2      1       1    70     0.0   \n",
+       "113    Apartamento       Praça Seca        2      0       0    80  1000.0   \n",
+       "166    Apartamento    Rocha Miranda        2      1       0    50  1100.0   \n",
+       "...            ...              ...      ...    ...     ...   ...     ...   \n",
+       "32609  Apartamento       Copacabana        3      0       0   130  4600.0   \n",
+       "32643  Apartamento        Guadalupe        1      0       0    40   550.0   \n",
+       "32666  Apartamento       Bonsucesso        1      0       0    60  1000.0   \n",
+       "32708  Apartamento         Flamengo        2      0       0    59  3500.0   \n",
+       "32809  Apartamento        Cascadura        3      0       1    70  1200.0   \n",
+       "\n",
+       "       Condominio  IPTU  \n",
+       "5             0.0   0.0  \n",
+       "10            0.0   0.0  \n",
+       "76          970.0  68.0  \n",
+       "113           0.0   0.0  \n",
+       "166           0.0   0.0  \n",
+       "...           ...   ...  \n",
+       "32609         0.0   0.0  \n",
+       "32643         0.0   0.0  \n",
+       "32666         0.0   0.0  \n",
+       "32708         0.0   0.0  \n",
+       "32809         0.0   0.0  \n",
+       "\n",
+       "[752 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_apartamentos.query('Valor == 0 | Condominio == 0 ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "registro_remover =df_apartamentos.query('Valor == 0 | Condominio == 0 ').index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removendo os registros com valores nulos\n",
+    "# axis=0 para remover linhas e inplace=True para alterar o dataframe original\n",
+    "# axis 1 para remover colunas\n",
+    "df_apartamentos.drop(registro_remover, axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([], dtype='int64')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_apartamentos.query('Valor == 0 | Condominio == 0 ').index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tipo</th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Quartos</th>\n",
+       "      <th>Vagas</th>\n",
+       "      <th>Suites</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Valor</th>\n",
+       "      <th>Condominio</th>\n",
+       "      <th>IPTU</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>390.0</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Higienópolis</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Cachambi</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Grajaú</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>642.0</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Lins de Vasconcelos</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Tipo               Bairro  Quartos  Vagas  Suites  Area   Valor  \\\n",
+       "3   Apartamento               Centro        1      0       0    15   800.0   \n",
+       "4   Apartamento         Higienópolis        1      0       0    48   800.0   \n",
+       "6   Apartamento             Cachambi        2      0       0    50  1300.0   \n",
+       "11  Apartamento               Grajaú        2      1       0    70  1500.0   \n",
+       "12  Apartamento  Lins de Vasconcelos        3      1       1    90  1500.0   \n",
+       "\n",
+       "    Condominio  IPTU  \n",
+       "3        390.0  20.0  \n",
+       "4        230.0   0.0  \n",
+       "6        301.0  17.0  \n",
+       "11       642.0  74.0  \n",
+       "12       455.0  14.0  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_apartamentos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_apartamentos.drop('Tipo', axis=1 , inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Quartos</th>\n",
+       "      <th>Vagas</th>\n",
+       "      <th>Suites</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Valor</th>\n",
+       "      <th>Condominio</th>\n",
+       "      <th>IPTU</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Centro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>390.0</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Higienópolis</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Cachambi</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Grajaú</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>642.0</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Lins de Vasconcelos</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Bairro  Quartos  Vagas  Suites  Area   Valor  Condominio  \\\n",
+       "3                Centro        1      0       0    15   800.0       390.0   \n",
+       "4          Higienópolis        1      0       0    48   800.0       230.0   \n",
+       "6              Cachambi        2      0       0    50  1300.0       301.0   \n",
+       "11               Grajaú        2      1       0    70  1500.0       642.0   \n",
+       "12  Lins de Vasconcelos        3      1       1    90  1500.0       455.0   \n",
+       "\n",
+       "    IPTU  \n",
+       "3   20.0  \n",
+       "4    0.0  \n",
+       "6   17.0  \n",
+       "11  74.0  \n",
+       "12  14.0  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_apartamentos.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtrando DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_01 = df_apartamentos.query('Quartos == 1  and Valor < 1200')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_02 = df_apartamentos.query('Quartos >= 2  and Valor < 3000  and Area > 70')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Salvar Dados Completo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_apartamentos.to_csv('../../data/dados_apartamento.csv', sep=';' ,index=False)"
    ]
   },
   {
