--- a/laboratorio_pandas/notebooks/pandas_IO_arquivos_diferentes.ipynb
+++ b/laboratorio_pandas/notebooks/pandas_IO_arquivos_diferentes.ipynb
@@ -1698,29 +1698,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1,\n",
+       "  'name': 'Leanne Graham',\n",
+       "  'username': 'Bret',\n",
+       "  'email': 'Sincere@april.biz',\n",
+       "  'address': {'street': 'Kulas Light',\n",
+       "   'suite': 'Apt. 556',\n",
+       "   'city': 'Gwenborough',\n",
+       "   'zipcode': '92998-3874',\n",
+       "   'geo': {'lat': '-37.3159', 'lng': '81.1496'}},\n",
+       "  'phone': '1-770-736-8031 x56442',\n",
+       "  'website': 'hildegard.org',\n",
+       "  'company': {'name': 'Romaguera-Crona',\n",
+       "   'catchPhrase': 'Multi-layered client-server neural-net',\n",
+       "   'bs': 'harness real-time e-markets'}},\n",
+       " {'id': 2,\n",
+       "  'name': 'Ervin Howell',\n",
+       "  'username': 'Antonette',\n",
+       "  'email': 'Shanna@melissa.tv',\n",
+       "  'address': {'street': 'Victor Plains',\n",
+       "   'suite': 'Suite 879',\n",
+       "   'city': 'Wisokyburgh',\n",
+       "   'zipcode': '90566-7771',\n",
+       "   'geo': {'lat': '-43.9509', 'lng': '-34.4618'}},\n",
+       "  'phone': '010-692-6593 x09125',\n",
+       "  'website': 'anastasia.net',\n",
+       "  'company': {'name': 'Deckow-Crist',\n",
+       "   'catchPhrase': 'Proactive didactic contingency',\n",
+       "   'bs': 'synergize scalable supply-chains'}},\n",
+       " {'id': 3,\n",
+       "  'name': 'Clementine Bauch',\n",
+       "  'username': 'Samantha',\n",
+       "  'email': 'Nathan@yesenia.net',\n",
+       "  'address': {'street': 'Douglas Extension',\n",
+       "   'suite': 'Suite 847',\n",
+       "   'city': 'McKenziehaven',\n",
+       "   'zipcode': '59590-4157',\n",
+       "   'geo': {'lat': '-68.6102', 'lng': '-47.0653'}},\n",
+       "  'phone': '1-463-123-4447',\n",
+       "  'website': 'ramiro.info',\n",
+       "  'company': {'name': 'Romaguera-Jacobson',\n",
+       "   'catchPhrase': 'Face to face bifurcated interface',\n",
+       "   'bs': 'e-enable strategic applications'}},\n",
+       " {'id': 4,\n",
+       "  'name': 'Patricia Lebsack',\n",
+       "  'username': 'Karianne',\n",
+       "  'email': 'Julianne.OConner@kory.org',\n",
+       "  'address': {'street': 'Hoeger Mall',\n",
+       "   'suite': 'Apt. 692',\n",
+       "   'city': 'South Elvis',\n",
+       "   'zipcode': '53919-4257',\n",
+       "   'geo': {'lat': '29.4572', 'lng': '-164.2990'}},\n",
+       "  'phone': '493-170-9623 x156',\n",
+       "  'website': 'kale.biz',\n",
+       "  'company': {'name': 'Robel-Corkery',\n",
+       "   'catchPhrase': 'Multi-tiered zero tolerance productivity',\n",
+       "   'bs': 'transition cutting-edge web services'}},\n",
+       " {'id': 5,\n",
+       "  'name': 'Chelsey Dietrich',\n",
+       "  'username': 'Kamren',\n",
+       "  'email': 'Lucio_Hettinger@annie.ca',\n",
+       "  'address': {'street': 'Skiles Walks',\n",
+       "   'suite': 'Suite 351',\n",
+       "   'city': 'Roscoeview',\n",
+       "   'zipcode': '33263',\n",
+       "   'geo': {'lat': '-31.8129', 'lng': '62.5342'}},\n",
+       "  'phone': '(254)954-1289',\n",
+       "  'website': 'demarco.info',\n",
+       "  'company': {'name': 'Keebler LLC',\n",
+       "   'catchPhrase': 'User-centric fault-tolerant solution',\n",
+       "   'bs': 'revolutionize end-to-end systems'}},\n",
+       " {'id': 6,\n",
+       "  'name': 'Mrs. Dennis Schulist',\n",
+       "  'username': 'Leopoldo_Corkery',\n",
+       "  'email': 'Karley_Dach@jasper.info',\n",
+       "  'address': {'street': 'Norberto Crossing',\n",
+       "   'suite': 'Apt. 950',\n",
+       "   'city': 'South Christy',\n",
+       "   'zipcode': '23505-1337',\n",
+       "   'geo': {'lat': '-71.4197', 'lng': '71.7478'}},\n",
+       "  'phone': '1-477-935-8478 x6430',\n",
+       "  'website': 'ola.org',\n",
+       "  'company': {'name': 'Considine-Lockman',\n",
+       "   'catchPhrase': 'Synchronised bottom-line interface',\n",
+       "   'bs': 'e-enable innovative applications'}},\n",
+       " {'id': 7,\n",
+       "  'name': 'Kurtis Weissnat',\n",
+       "  'username': 'Elwyn.Skiles',\n",
+       "  'email': 'Telly.Hoeger@billy.biz',\n",
+       "  'address': {'street': 'Rex Trail',\n",
+       "   'suite': 'Suite 280',\n",
+       "   'city': 'Howemouth',\n",
+       "   'zipcode': '58804-1099',\n",
+       "   'geo': {'lat': '24.8918', 'lng': '21.8984'}},\n",
+       "  'phone': '210.067.6132',\n",
+       "  'website': 'elvis.io',\n",
+       "  'company': {'name': 'Johns Group',\n",
+       "   'catchPhrase': 'Configurable multimedia task-force',\n",
+       "   'bs': 'generate enterprise e-tailers'}},\n",
+       " {'id': 8,\n",
+       "  'name': 'Nicholas Runolfsdottir V',\n",
+       "  'username': 'Maxime_Nienow',\n",
+       "  'email': 'Sherwood@rosamond.me',\n",
+       "  'address': {'street': 'Ellsworth Summit',\n",
+       "   'suite': 'Suite 729',\n",
+       "   'city': 'Aliyaview',\n",
+       "   'zipcode': '45169',\n",
+       "   'geo': {'lat': '-14.3990', 'lng': '-120.7677'}},\n",
+       "  'phone': '586.493.6943 x140',\n",
+       "  'website': 'jacynthe.com',\n",
+       "  'company': {'name': 'Abernathy Group',\n",
+       "   'catchPhrase': 'Implemented secondary concept',\n",
+       "   'bs': 'e-enable extensible e-tailers'}},\n",
+       " {'id': 9,\n",
+       "  'name': 'Glenna Reichert',\n",
+       "  'username': 'Delphine',\n",
+       "  'email': 'Chaim_McDermott@dana.io',\n",
+       "  'address': {'street': 'Dayna Park',\n",
+       "   'suite': 'Suite 449',\n",
+       "   'city': 'Bartholomebury',\n",
+       "   'zipcode': '76495-3109',\n",
+       "   'geo': {'lat': '24.6463', 'lng': '-168.8889'}},\n",
+       "  'phone': '(775)976-6794 x41206',\n",
+       "  'website': 'conrad.com',\n",
+       "  'company': {'name': 'Yost and Sons',\n",
+       "   'catchPhrase': 'Switchable contextually-based project',\n",
+       "   'bs': 'aggregate real-time technologies'}},\n",
+       " {'id': 10,\n",
+       "  'name': 'Clementina DuBuque',\n",
+       "  'username': 'Moriah.Stanton',\n",
+       "  'email': 'Rey.Padberg@karina.biz',\n",
+       "  'address': {'street': 'Kattie Turnpike',\n",
+       "   'suite': 'Suite 198',\n",
+       "   'city': 'Lebsackbury',\n",
+       "   'zipcode': '31428-2261',\n",
+       "   'geo': {'lat': '-38.2386', 'lng': '57.2232'}},\n",
+       "  'phone': '024-648-3804',\n",
+       "  'website': 'ambrose.net',\n",
+       "  'company': {'name': 'Hoeger LLC',\n",
+       "   'catchPhrase': 'Centralized empowering task-force',\n",
+       "   'bs': 'target end-to-end models'}}]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
     "\n",
     "dados_usuarios = requests.get('https://jsonplaceholder.typicode.com/users')\n",
-    "resultado = json.loads(dados_usuarios.text)"
+    "resultado = json.loads(dados_usuarios.text)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dados_usuarios_normalizado = pd.json_normalize(resultado, sep='_')"
+    "dados_usuarios_normalizado = pd.json_normalize(resultado)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1750,15 +1900,15 @@
        "      <th>email</th>\n",
        "      <th>phone</th>\n",
        "      <th>website</th>\n",
-       "      <th>address_street</th>\n",
-       "      <th>address_suite</th>\n",
-       "      <th>address_city</th>\n",
-       "      <th>address_zipcode</th>\n",
-       "      <th>address_geo_lat</th>\n",
-       "      <th>address_geo_lng</th>\n",
-       "      <th>company_name</th>\n",
-       "      <th>company_catchPhrase</th>\n",
-       "      <th>company_bs</th>\n",
+       "      <th>address.street</th>\n",
+       "      <th>address.suite</th>\n",
+       "      <th>address.city</th>\n",
+       "      <th>address.zipcode</th>\n",
+       "      <th>address.geo.lat</th>\n",
+       "      <th>address.geo.lng</th>\n",
+       "      <th>company.name</th>\n",
+       "      <th>company.catchPhrase</th>\n",
+       "      <th>company.bs</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1959,7 +2109,7 @@
        "8   9           Glenna Reichert          Delphine    Chaim_McDermott@dana.io   \n",
        "9  10        Clementina DuBuque    Moriah.Stanton     Rey.Padberg@karina.biz   \n",
        "\n",
-       "                   phone        website     address_street address_suite  \\\n",
+       "                   phone        website     address.street address.suite  \\\n",
        "0  1-770-736-8031 x56442  hildegard.org        Kulas Light      Apt. 556   \n",
        "1    010-692-6593 x09125  anastasia.net      Victor Plains     Suite 879   \n",
        "2         1-463-123-4447    ramiro.info  Douglas Extension     Suite 847   \n",
@@ -1971,7 +2121,7 @@
        "8   (775)976-6794 x41206     conrad.com         Dayna Park     Suite 449   \n",
        "9           024-648-3804    ambrose.net    Kattie Turnpike     Suite 198   \n",
        "\n",
-       "     address_city address_zipcode address_geo_lat address_geo_lng  \\\n",
+       "     address.city address.zipcode address.geo.lat address.geo.lng  \\\n",
        "0     Gwenborough      92998-3874        -37.3159         81.1496   \n",
        "1     Wisokyburgh      90566-7771        -43.9509        -34.4618   \n",
        "2   McKenziehaven      59590-4157        -68.6102        -47.0653   \n",
@@ -1983,7 +2133,7 @@
        "8  Bartholomebury      76495-3109         24.6463       -168.8889   \n",
        "9     Lebsackbury      31428-2261        -38.2386         57.2232   \n",
        "\n",
-       "         company_name                       company_catchPhrase  \\\n",
+       "         company.name                       company.catchPhrase  \\\n",
        "0     Romaguera-Crona    Multi-layered client-server neural-net   \n",
        "1        Deckow-Crist            Proactive didactic contingency   \n",
        "2  Romaguera-Jacobson         Face to face bifurcated interface   \n",
@@ -1995,7 +2145,7 @@
        "8       Yost and Sons     Switchable contextually-based project   \n",
        "9          Hoeger LLC         Centralized empowering task-force   \n",
        "\n",
-       "                             company_bs  \n",
+       "                             company.bs  \n",
        "0           harness real-time e-markets  \n",
        "1      synergize scalable supply-chains  \n",
        "2       e-enable strategic applications  \n",
@@ -2008,13 +2158,207 @@
        "9              target end-to-end models  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dados_usuarios_normalizado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caminho_html = 'https://raw.githubusercontent.com/alura-cursos/Pandas/refs/heads/main/filmes_wikipedia.html'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dados_filmes = pd.read_html(caminho_html)\n",
+    "top_filmes = dados_filmes[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Film</th>\n",
+       "      <th>Release year</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Production companies</th>\n",
+       "      <th>Rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Citizen Kane</td>\n",
+       "      <td>1941</td>\n",
+       "      <td>Orson Welles</td>\n",
+       "      <td>RKO Radio Pictures</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Casablanca</td>\n",
+       "      <td>1942</td>\n",
+       "      <td>Michael Curtiz</td>\n",
+       "      <td>Warner Bros. Pictures</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>Francis Ford Coppola</td>\n",
+       "      <td>Paramount Pictures, Alfran Productions</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gone with the Wind</td>\n",
+       "      <td>1939</td>\n",
+       "      <td>Victor Fleming</td>\n",
+       "      <td>Selznick International Pictures</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lawrence of Arabia</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>David Lean</td>\n",
+       "      <td>Horizon Pictures</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>The Searchers</td>\n",
+       "      <td>1956</td>\n",
+       "      <td>John Ford</td>\n",
+       "      <td>C. V. Whitney Pictures</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Bringing Up Baby</td>\n",
+       "      <td>1938</td>\n",
+       "      <td>Howard Hawks</td>\n",
+       "      <td>RKO Radio Pictures</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Unforgiven</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>Clint Eastwood</td>\n",
+       "      <td>The Malpaso Company</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Guess Who's Coming to Dinner</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>Stanley Kramer</td>\n",
+       "      <td>Columbia Pictures</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Yankee Doodle Dandy</td>\n",
+       "      <td>1942</td>\n",
+       "      <td>Michael Curtiz</td>\n",
+       "      <td>Warner Bros. Pictures</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            Film  Release year              Director  \\\n",
+       "0                   Citizen Kane          1941          Orson Welles   \n",
+       "1                     Casablanca          1942        Michael Curtiz   \n",
+       "2                  The Godfather          1972  Francis Ford Coppola   \n",
+       "3             Gone with the Wind          1939        Victor Fleming   \n",
+       "4             Lawrence of Arabia          1962            David Lean   \n",
+       "..                           ...           ...                   ...   \n",
+       "95                 The Searchers          1956             John Ford   \n",
+       "96              Bringing Up Baby          1938          Howard Hawks   \n",
+       "97                    Unforgiven          1992        Clint Eastwood   \n",
+       "98  Guess Who's Coming to Dinner          1967        Stanley Kramer   \n",
+       "99           Yankee Doodle Dandy          1942        Michael Curtiz   \n",
+       "\n",
+       "                      Production companies  Rank  \n",
+       "0                       RKO Radio Pictures     1  \n",
+       "1                    Warner Bros. Pictures     2  \n",
+       "2   Paramount Pictures, Alfran Productions     3  \n",
+       "3          Selznick International Pictures     4  \n",
+       "4                         Horizon Pictures     5  \n",
+       "..                                     ...   ...  \n",
+       "95                  C. V. Whitney Pictures    96  \n",
+       "96                      RKO Radio Pictures    97  \n",
+       "97                     The Malpaso Company    98  \n",
+       "98                       Columbia Pictures    99  \n",
+       "99                   Warner Bros. Pictures   100  \n",
+       "\n",
+       "[100 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_filmes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_filmes.to_html('../../data/top_filmes.html', index=False)"
    ]
   },
   {
