modulo : selecionando e agrupando dados - conhecendo os dados

--- a/laboratorio_pandas/notebooks/manipulando_arquivos_diferentes.ipynb
+++ b/laboratorio_pandas/notebooks/manipulando_arquivos_diferentes.ipynb
@@ -4529,9 +4529,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>ID_Cliente</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Grau_escolaridade</th>\n",
+       "      <th>Estado_civil</th>\n",
+       "      <th>Tamanho_familia</th>\n",
+       "      <th>Categoria_de_renda</th>\n",
+       "      <th>Ocupacao</th>\n",
+       "      <th>Anos_empregado</th>\n",
+       "      <th>Rendimento_anual</th>\n",
+       "      <th>Tem_carro</th>\n",
+       "      <th>Moradia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5008804</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Ensino superior</td>\n",
+       "      <td>União-estável</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Empregado</td>\n",
+       "      <td>Outro</td>\n",
+       "      <td>12</td>\n",
+       "      <td>427500.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Apartamento alugado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5008805</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Ensino superior</td>\n",
+       "      <td>União-estável</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Empregado</td>\n",
+       "      <td>Outro</td>\n",
+       "      <td>12</td>\n",
+       "      <td>427500.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Apartamento alugado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5008806</td>\n",
+       "      <td>58</td>\n",
+       "      <td>Ensino médio</td>\n",
+       "      <td>Casado</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Empregado</td>\n",
+       "      <td>Segurança</td>\n",
+       "      <td>3</td>\n",
+       "      <td>112500.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Casa/apartamento próprio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5008808</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Ensino superior</td>\n",
+       "      <td>Solteiro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Associado comercial</td>\n",
+       "      <td>Vendas</td>\n",
+       "      <td>8</td>\n",
+       "      <td>270000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Casa/apartamento próprio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5008809</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Ensino médio</td>\n",
+       "      <td>Solteiro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Associado comercial</td>\n",
+       "      <td>Vendas</td>\n",
+       "      <td>8</td>\n",
+       "      <td>270000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Casa/apartamento próprio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438459</th>\n",
+       "      <td>438459.0</td>\n",
+       "      <td>6840222</td>\n",
+       "      <td>43</td>\n",
+       "      <td>Ensino médio</td>\n",
+       "      <td>Solteiro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Empregado</td>\n",
+       "      <td>Construção Civil</td>\n",
+       "      <td>8</td>\n",
+       "      <td>103500.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Casa/apartamento próprio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438460</th>\n",
+       "      <td>438460.0</td>\n",
+       "      <td>6841878</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Ensino superior</td>\n",
+       "      <td>Solteiro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Associado comercial</td>\n",
+       "      <td>Vendas</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Mora com os pais</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438461</th>\n",
+       "      <td>438461.0</td>\n",
+       "      <td>6842765</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Ensino médio</td>\n",
+       "      <td>Casado</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Pensionista</td>\n",
+       "      <td>Outro</td>\n",
+       "      <td>0</td>\n",
+       "      <td>72000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Casa/apartamento próprio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438462</th>\n",
+       "      <td>438462.0</td>\n",
+       "      <td>6842885</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Ensino médio</td>\n",
+       "      <td>Casado</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Empregado</td>\n",
+       "      <td>Vendas</td>\n",
+       "      <td>3</td>\n",
+       "      <td>121500.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Casa/apartamento próprio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438463</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6850985</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Doutorado</td>\n",
+       "      <td>Solteiro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Empregado</td>\n",
+       "      <td>TI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>290000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Casa/apartamento próprio</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>438464 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           index  ID_Cliente  Idade Grau_escolaridade   Estado_civil  \\\n",
+       "0            0.0     5008804     32   Ensino superior  União-estável   \n",
+       "1            1.0     5008805     32   Ensino superior  União-estável   \n",
+       "2            2.0     5008806     58      Ensino médio         Casado   \n",
+       "3            3.0     5008808     52   Ensino superior       Solteiro   \n",
+       "4            4.0     5008809     52      Ensino médio       Solteiro   \n",
+       "...          ...         ...    ...               ...            ...   \n",
+       "438459  438459.0     6840222     43      Ensino médio       Solteiro   \n",
+       "438460  438460.0     6841878     22   Ensino superior       Solteiro   \n",
+       "438461  438461.0     6842765     59      Ensino médio         Casado   \n",
+       "438462  438462.0     6842885     51      Ensino médio         Casado   \n",
+       "438463       NaN     6850985     33         Doutorado       Solteiro   \n",
+       "\n",
+       "        Tamanho_familia   Categoria_de_renda          Ocupacao  \\\n",
+       "0                     2            Empregado             Outro   \n",
+       "1                     2            Empregado             Outro   \n",
+       "2                     2            Empregado         Segurança   \n",
+       "3                     1  Associado comercial            Vendas   \n",
+       "4                     1  Associado comercial            Vendas   \n",
+       "...                 ...                  ...               ...   \n",
+       "438459                1            Empregado  Construção Civil   \n",
+       "438460                1  Associado comercial            Vendas   \n",
+       "438461                2          Pensionista             Outro   \n",
+       "438462                2            Empregado            Vendas   \n",
+       "438463                1            Empregado                TI   \n",
+       "\n",
+       "        Anos_empregado  Rendimento_anual  Tem_carro                   Moradia  \n",
+       "0                   12          427500.0          1       Apartamento alugado  \n",
+       "1                   12          427500.0          1       Apartamento alugado  \n",
+       "2                    3          112500.0          1  Casa/apartamento próprio  \n",
+       "3                    8          270000.0          0  Casa/apartamento próprio  \n",
+       "4                    8          270000.0          0  Casa/apartamento próprio  \n",
+       "...                ...               ...        ...                       ...  \n",
+       "438459               8          103500.0          0  Casa/apartamento próprio  \n",
+       "438460               1           54000.0          0          Mora com os pais  \n",
+       "438461               0           72000.0          0  Casa/apartamento próprio  \n",
+       "438462               3          121500.0          0  Casa/apartamento próprio  \n",
+       "438463               2          290000.0          0  Casa/apartamento próprio  \n",
+       "\n",
+       "[438464 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.read_sql_table('clientes', engine)"
    ]
